--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.15
+  flutter_launcher_icons: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +24,23 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+# flutter_launcher_icons
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/png/app-icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/png/app-icon.png"
+  windows:
+    generate: true
+    image_path: "assets/png/app-icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/png/app-icon.png"
 
 # flutter_native_splash
 flutter_native_splash:
