--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.15
   flutter_launcher_icons: ^0.11.0
+  flutter_riverpod: ^2.1.1
 
 dev_dependencies:
   flutter_test:
