--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_native_splash: ^2.2.15
   flutter_launcher_icons: ^0.11.0
   flutter_riverpod: ^2.1.1
+  firebase_core: ^2.3.0
 
 dev_dependencies:
   flutter_test:
